feat: 마커 클릭에 대한 마커 표시

--- a/android/app/src/main/res/drawable/ic_marker_mine_clicked.xml
+++ b/android/app/src/main/res/drawable/ic_marker_mine_clicked.xml
@@ -5,7 +5,7 @@
     android:viewportHeight="37">
   <path
       android:pathData="M2,33a10,4 0,1 0,20 0a10,4 0,1 0,-20 0z"
-      android:fillColor="#D1D3D9"/>
+      android:fillColor="#8CD1D3D9"/>
   <path
       android:pathData="M12.297,0.004C5.52,-0.165 0,5.397 0,12.239C0,20.7 6.281,27.171 9.983,31.115C11.107,32.295 12.958,32.295 14.082,31.115C17.486,27.475 23.172,21.61 23.932,13.992C24.66,6.779 19.437,0.172 12.297,0.004ZM11.999,16.79C9.553,16.79 7.537,14.767 7.537,12.239C7.537,9.745 9.52,7.689 11.999,7.689C14.445,7.689 16.462,9.711 16.462,12.239C16.462,14.767 14.478,16.79 11.999,16.79Z"
       android:fillColor="#15171E"/>
