feat: SettingMyLocationActivity 구체화

--- a/android/app/src/main/res/layout/activity_setting_my_location.xml
+++ b/android/app/src/main/res/layout/activity_setting_my_location.xml
@@ -48,6 +48,7 @@
             app:layout_constraintTop_toTopOf="@id/view_my_location_top_bar" />
 
         <LinearLayout
+            android:id="@+id/linear_layout_my_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/gray50"
@@ -92,5 +93,18 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/vp_group_select_dog_list" />
         </LinearLayout>
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_my_location_loading"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            android:autoHandwritingEnabled="false"
+            app:layout_constraintTop_toBottomOf="@+id/view_my_location_top_bar"
+            app:layout_constraintBottom_toTopOf="@+id/linear_layout_my_location"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:lottie_fileName="animation_loading.json"
+            app:lottie_loop="true" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
