--- a/android/app/src/main/res/drawable/rect_black_gradient_start.xml
+++ b/android/app/src/main/res/drawable/rect_black_gradient_start.xml
@@ -4,6 +4,8 @@
 
     <gradient
         android:angle="90"
-        android:startColor="#80000000"
+        android:centerColor="#40000000"
+        android:endColor="#50000000"
+        android:startColor="#00000000"
         android:type="linear" />
 </shape>
