--- a/android/app/src/main/res/layout/item_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_pet_detail.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="dog"
-            type="com.happy.friendogly.presentation.ui.mypage.Dog" />
+            name="petDetail"
+            type="com.happy.friendogly.presentation.ui.petdetail.PetDetail" />
 
 
     </data>
@@ -19,10 +19,10 @@
 
         <ImageView
             android:id="@+id/iv_dog_profile"
-            urlToImage="@{dog.image}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
+            android:src="@drawable/img_acorm"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -32,6 +32,7 @@
             tools:src="@drawable/img_acorm" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@drawable/rect_black_gradient_fill"
@@ -46,36 +47,39 @@
                 style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{dog.name}"
+                android:layout_marginBottom="12dp"
+                android:text="@{petDetail.name}"
                 android:textColor="@color/white"
                 android:textSize="32dp"
-                app:layout_constraintBottom_toTopOf="@+id/tv_dog_birthday"
-                app:layout_constraintStart_toStartOf="@+id/tv_dog_birthday"
+                app:layout_constraintBottom_toTopOf="@+id/tv_dog_description"
+                app:layout_constraintStart_toStartOf="@+id/tv_dog_description"
                 tools:text="도토리" />
-
-            <ImageView
-                android:id="@+id/iv_dog_gender"
-                genderDrawable="@{dog.gender}"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_marginStart="12dp"
-                app:layout_constraintBottom_toBottomOf="@+id/tv_dog_name"
-                app:layout_constraintStart_toEndOf="@+id/tv_dog_name"
-                app:layout_constraintTop_toTopOf="@+id/tv_dog_name"
-                tools:src="@drawable/img_dog_male" />
 
 
             <TextView
                 android:id="@+id/tv_dog_birthday"
-                style="@style/Theme.AppCompat.TextView.Regular.Black.Size18"
+                style="@style/Theme.AppCompat.TextView.Regular.Black.Size24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="12dp"
+                android:layout_marginStart="6dp"
                 android:textColor="@color/white"
-                app:dogBirthday="@{dog.birthDate}"
-                app:layout_constraintBottom_toTopOf="@+id/tv_dog_description"
-                app:layout_constraintStart_toStartOf="@+id/tv_dog_description"
-                tools:text="1999.11" />
+                app:age="@{petDetail.age}"
+                app:isAtLeastOneYearOld="@{petDetail.isAtLeastOneYearOld}"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_dog_name"
+                app:layout_constraintStart_toEndOf="@+id/tv_dog_name"
+                app:layout_constraintTop_toTopOf="@+id/tv_dog_name"
+                tools:text="(2개월)" />
+
+            <ImageView
+                android:id="@+id/iv_dog_gender"
+                genderDrawable="@{petDetail.gender}"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginStart="6dp"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_dog_birthday"
+                app:layout_constraintStart_toEndOf="@+id/tv_dog_birthday"
+                app:layout_constraintTop_toTopOf="@+id/tv_dog_birthday"
+                tools:src="@drawable/img_dog_male" />
 
 
             <TextView
@@ -83,36 +87,37 @@
                 style="@style/Theme.AppCompat.TextView.Regular.Black.Size18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{dog.description}"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toTopOf="@+id/tv_dog_neutering"
-                app:layout_constraintStart_toStartOf="@+id/tv_dog_neutering"
-                tools:text="우리 강아지는 사람을 좋아해요" />
-
-
-            <TextView
-                android:id="@+id/tv_dog_neutering"
-                style="@style/Theme.AppCompat.TextView.Regular.Black.Size18"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:text="@{petDetail.description}"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toTopOf="@+id/tv_dog_size"
                 app:layout_constraintStart_toStartOf="@+id/tv_dog_size"
-                app:neuteredTitle="@{dog.neutered}"
-                tools:text="중성화를 했어요" />
+                tools:text="우리 강아지는 사람을 좋아해요" />
 
             <TextView
                 android:id="@+id/tv_dog_size"
                 style="@style/Theme.AppCompat.TextView.Regular.Black.Size18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="80dp"
                 android:textColor="@color/white"
-                app:dogSize="@{dog.sizeType}"
+                app:dogSize="@{petDetail.sizeType}"
+                app:layout_constraintBottom_toTopOf="@+id/tv_dog_neutering"
+                app:layout_constraintStart_toStartOf="@+id/tv_dog_neutering"
+                tools:text="소형견이에요" />
+
+            <TextView
+                android:id="@+id/tv_dog_neutering"
+                style="@style/Theme.AppCompat.TextView.Regular.Black.Size18"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="60dp"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:text="소형견이에요" />
+                app:neuteredTitle="@{petDetail.gender}"
+                tools:text="중성화를 했어요" />
+
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
