--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -347,6 +347,13 @@
         <item name="fontFamily">@font/noto_sans_kr_regular</item>
     </style>
 
+    <style name="Theme.AppCompat.TextView.Regular.Black.Size24" parent="@style/Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">24dp</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="fontFamily">@font/noto_sans_kr_regular</item>
+    </style>
+
     <style name="Theme.AppCompat.TextView.Regular.White.Size14" parent="@style/Widget.AppCompat.TextView">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">14dp</item>
