--- a/android/app/src/main/res/layout/item_other_pet_profile.xml
+++ b/android/app/src/main/res/layout/item_other_pet_profile.xml
@@ -129,7 +129,7 @@
 
         <TextView
             style="@style/Theme.AppCompat.TextView.Regular.Black.Size14"
-            onSingleClick="@{() -> actionHandler.navigateToPetDetail(pet.id)}"
+            onSingleClick="@{() -> actionHandler.navigateToPetDetail()}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/rect_coral400_fill_20"
