--- a/android/app/src/main/res/layout/include_group_not_address.xml
+++ b/android/app/src/main/res/layout/include_group_not_address.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/linear_layout_group_not_address"
     android:orientation="vertical"
     android:gravity="center"
     android:layout_width="match_parent"
