--- a/android/app/src/main/res/layout/include_group_not_data.xml
+++ b/android/app/src/main/res/layout/include_group_not_data.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/linear_layout_group_not_data"
     android:gravity="center"
     android:orientation="vertical">
 
