--- a/android/app/src/main/res/layout/fragment_group_list.xml
+++ b/android/app/src/main/res/layout/fragment_group_list.xml
@@ -126,13 +126,15 @@
                     android:id="@+id/include_group_address"
                     layout="@layout/include_group_not_address"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    app:vm="@{vm}" />
 
                 <include
                     android:id="@+id/include_group_data"
                     layout="@layout/include_group_not_data"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"
+                    app:vm="@{vm}" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
