--- a/android/app/src/main/res/layout/include_group_not_address.xml
+++ b/android/app/src/main/res/layout/include_group_not_address.xml
@@ -1,46 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/linear_layout_group_not_address"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:src="@drawable/ic_no_adress" />
+    <data>
+        <variable
+            name="vm"
+            type="com.happy.friendogly.presentation.ui.group.list.GroupListViewModel" />
+    </data>
 
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="20dp" />
+    <LinearLayout
+        android:id="@+id/linear_layout_group_not_address"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        style="@style/Theme.AppCompat.TextView.Medium.Gray08.Size18"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/group_list_no_address_title" />
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/ic_no_adress" />
 
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="10dp" />
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp" />
 
-    <TextView
-        style="@style/Theme.AppCompat.TextView.Medium.Gray05.Size16"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/group_list_no_address_content" />
+        <TextView
+            style="@style/Theme.AppCompat.TextView.Medium.Gray08.Size18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/group_list_no_address_title" />
 
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="20dp" />
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="10dp" />
 
-    <TextView
-        style="@style/Theme.AppCompat.TextView.Regular.Black.Size14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/rect_gray01_line_gray03_16"
-        android:paddingHorizontal="24dp"
-        android:paddingVertical="8dp"
-        android:text="@string/group_list_submit_text" />
-</LinearLayout>
+        <TextView
+            style="@style/Theme.AppCompat.TextView.Medium.Gray05.Size16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/group_list_no_address_content" />
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="20dp" />
+
+        <TextView
+            onSingleClick="@{()->vm.addMyLocation()}"
+            style="@style/Theme.AppCompat.TextView.Regular.Black.Size14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rect_gray01_line_gray03_16"
+            android:paddingHorizontal="24dp"
+            android:paddingVertical="8dp"
+            android:text="@string/group_list_submit_text" />
+    </LinearLayout>
+</layout>
