--- a/android/app/src/main/res/layout/activity_setting_my_location.xml
+++ b/android/app/src/main/res/layout/activity_setting_my_location.xml
@@ -72,6 +72,7 @@
 
             <TextView
                 style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size16"
+                app:myLocation ="@{vm.userAddress}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{vm.userAddress.thoroughfare}"
