--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -6,6 +6,10 @@
     <data>
 
         <variable
+            name="actionHandler"
+            type="com.happy.friendogly.presentation.ui.woof.WoofActionHandler" />
+
+        <variable
             name="vm"
             type="com.happy.friendogly.presentation.ui.woof.WoofViewModel" />
     </data>
@@ -21,12 +25,47 @@
             android:layout_height="match_parent"
             android:clickable="true" />
 
+        <ImageButton
+            android:id="@+id/btn_woof_back"
+            style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/rect_coral400_fill_12"
+            android:gravity="center"
+            android:onClick="@{() -> actionHandler.clickBackBtn()}"
+            android:src="@drawable/ic_arrow_left_white"
+            android:visibility="invisible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
+
+        <ImageButton
+            android:id="@+id/btn_woof_close"
+            style="@style/Theme.AppCompat.TextView.SemiBold.White.Size14"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/rect_coral400_fill_12"
+            android:gravity="center"
+            android:onClick="@{() -> actionHandler.clickCloseBtn()}"
+            android:src="@drawable/ic_close_white"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible" />
+
         <FrameLayout
             android:id="@+id/btn_woof_location"
             android:layout_width="46dp"
             android:layout_height="46dp"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="40dp"
+            android:onClick="@{() -> actionHandler.clickLocationBtn()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -39,6 +78,7 @@
             android:layout_marginBottom="5dp"
             android:background="@drawable/rect_coral400_fill_12"
             android:gravity="center"
+            android:onClick="@{() -> actionHandler.clickMyFootprintBtn()}"
             android:text="MY"
             app:layout_constraintBottom_toTopOf="@id/btn_woof_mark"
             app:layout_constraintStart_toStartOf="parent" />
@@ -52,6 +92,7 @@
             android:background="@color/transparent"
             android:clickable="true"
             android:focusable="true"
+            android:onClick="@{() -> actionHandler.clickMarkBtn()}"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_mark_foot_print_btn"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -71,15 +112,10 @@
             android:paddingHorizontal="15dp"
             android:paddingVertical="10dp"
             android:textColor="@color/coral500"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:layout_constraintBottom_toTopOf="@id/vp_woof_pet_detail"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:text="30분째 산책중"
-            tools:visibility="invisible" />
-
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"></FrameLayout>
+            tools:text="30분째 산책중" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/vp_woof_pet_detail"
@@ -93,6 +129,57 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_woof_register_marker"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:layout_margin="10dp"
+            android:background="@drawable/rect_white_fill_30"
+            android:elevation="10dp"
+            android:paddingHorizontal="6dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            tools:visibility="visible">
+
+            <TextView
+                android:id="@+id/tv_woof_mark_walking_area"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Orange.Size26"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="24dp"
+                android:text="산책 영역 표시"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_woof_address"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size20"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="8dp"
+                android:text="서울 송파구 올림픽로35다길 42"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_woof_mark_walking_area"
+                tools:text="서울 송파구 올림픽로35다길 42" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_woof_register_marker"
+                style="@style/Theme.AppCompat.TextView.SemiBold.White.Size20"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginHorizontal="12dp"
+                android:layout_marginBottom="20dp"
+                android:background="@drawable/rect_coral400_fill_16"
+                android:onClick="@{() -> actionHandler.clickRegisterMarkerBtn()}"
+                android:text="이 위치에 발자국 등록"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <FrameLayout
             android:id="@+id/layout_woof_loading"
