--- a/android/app/src/main/res/layout/activity_setting_my_location.xml
+++ b/android/app/src/main/res/layout/activity_setting_my_location.xml
@@ -28,9 +28,10 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            onSingleClick="@{()->vm.closeSelect()}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginStart="15dp"
             android:background="@drawable/ripple_circle_white"
             android:src="@drawable/ic_close"
             app:layout_constraintBottom_toBottomOf="@id/view_my_location_top_bar"
@@ -75,7 +76,6 @@
                 app:myLocation ="@{vm.userAddress}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@{vm.userAddress.thoroughfare}"
                 tools:text="대한민국 제주특별자치도 제주시 이도1동 1250-15" />
 
             <Space
@@ -83,6 +83,7 @@
                 android:layout_height="20dp" />
 
             <TextView
+                onSingleClick="@{()->vm.submitSelect()}"
                 style="@style/Theme.AppCompat.TextView.SemiBold.White.Size16"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
