--- a/android/app/src/main/res/layout/activity_other_profile.xml
+++ b/android/app/src/main/res/layout/activity_other_profile.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View"/>
+
         <variable
             name="vm"
             type="com.happy.friendogly.presentation.ui.otherprofile.OtherProfileViewModel" />
@@ -157,8 +159,8 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.viewpager2.widget.ViewPager2
-                        android:id="@+id/vp_dog_profile"
-                        android:layout_width="wrap_content"
+                        android:id="@+id/vp_pet_profile"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -178,7 +180,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/vp_dog_profile"
+                        app:layout_constraintTop_toBottomOf="@+id/vp_pet_profile"
                         app:setUpIndicator="@{vm.uiState.pets.size()}" />
 
 
@@ -188,6 +190,7 @@
                         android:layout_height="80dp"
                         android:layout_marginTop="16dp"
                         android:src="@drawable/ic_empty_pet"
+                        android:visibility="@{vm.uiState.pets.size() == 0 ? View.VISIBLE : View.GONE}"
                         app:layout_constraintDimensionRatio="1:1"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -200,6 +203,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
+                        android:visibility="@{vm.uiState.pets.size() == 0 ? View.VISIBLE : View.GONE}"
                         android:layout_marginBottom="16dp"
                         android:text="@string/empty_other_pet"
                         app:layout_constraintBottom_toBottomOf="parent"
