--- a/android/app/src/main/res/layout/fragment_woof.xml
+++ b/android/app/src/main/res/layout/fragment_woof.xml
@@ -124,11 +124,54 @@
             android:background="@color/transparent"
             android:clipChildren="false"
             android:clipToPadding="false"
-            android:paddingHorizontal="20dp"
+            android:elevation="10dp"
+            android:paddingHorizontal="12dp"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_woof_location_register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="20dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@id/layout_woof_register_marker"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.naver.maps.map.widget.LocationButtonView
+                android:id="@+id/lbv_woof_location_register"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <FrameLayout
+            android:id="@+id/btn_woof_location_register"
+            android:layout_width="46dp"
+            android:layout_height="46dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="20dp"
+            android:onClick="@{() -> actionHandler.clickLocationBtn()}"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@id/layout_woof_register_marker"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_woof_register_marker"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_marginBottom="46dp"
+            android:src="@drawable/ic_marker_mine_clicked"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/layout_woof_register_marker"
@@ -149,18 +192,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="24dp"
-                android:text="산책 영역 표시"
+                android:text="산책 영역 등록"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/tv_woof_address"
-                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size20"
+                style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size18"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="8dp"
-                android:text="서울 송파구 올림픽로35다길 42"
+                android:text="@{vm.address}"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_woof_mark_walking_area"
                 tools:text="서울 송파구 올림픽로35다길 42" />
