feat: 펫 편집 로직 추가

--- a/android/app/src/main/res/layout/activity_register_pet.xml
+++ b/android/app/src/main/res/layout/activity_register_pet.xml
@@ -83,8 +83,9 @@
                 android:id="@+id/iv_dog_image"
                 android:layout_width="match_parent"
                 android:layout_height="350dp"
+                app:dogImageBitmap="@{vm.profileImage}"
+                app:dogImageUrl="@{vm.uiState.profileImageUrl}"
                 android:adjustViewBounds="true"
-                app:dogProfile="@{vm.profileImage}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
@@ -332,7 +333,7 @@
                 android:includeFontPadding="false"
                 android:padding="18dp"
                 android:text="@string/pet_submit_title"
-                app:dogEditBtnBackground="@{vm.isProfileComplete()}"
+                app:dogEditBtnBackground="@{vm.isProfileComplete}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
