refactor: 중성화 여부 체크 박스 색상 변경

--- a/android/app/src/main/res/values/themes.xml
+++ b/android/app/src/main/res/values/themes.xml
@@ -16,7 +16,7 @@
     </style>
 
     <style name="Widget.App.CheckBox" parent="Widget.MaterialComponents.CompoundButton.CheckBox">
-        <item name="buttonTint">@color/blue</item>
+        <item name="buttonTint">@color/coral400</item>
     </style>
 
     <style name="Theme.Friendogly" parent="Base.Theme.Friendogly" />
