--- a/android/app/src/main/res/layout/item_pet_detail.xml
+++ b/android/app/src/main/res/layout/item_pet_detail.xml
@@ -19,10 +19,10 @@
 
         <ImageView
             android:id="@+id/iv_dog_profile"
+            urlToImage="@{petDetail.imageUrl}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scaleType="centerCrop"
-            android:src="@drawable/img_acorm"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
