feat: Group domain 모델 구현

--- a/android/app/src/main/res/layout/activity_group_detail.xml
+++ b/android/app/src/main/res/layout/activity_group_detail.xml
@@ -66,7 +66,7 @@
 
             <ImageView
                 android:id="@+id/iv_group_detail_user_image"
-                glide1000="@{vm.group.groupReaderImage}"
+                glide1000="@{vm.group.groupLeaderImage}"
                 onSingleClick="@{() -> vm.navigateToProfile(1)}"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -241,9 +241,9 @@
                 android:layout_marginBottom="24dp"
                 android:background="@drawable/rect_coral04_fill_16"
                 android:gravity="center"
-                app:detailViewTypeBackground="@{vm.group.detailViewType}"
-                app:detailViewTypeStyle="@{vm.group.detailViewType}"
-                app:detailViewTypeText="@{vm.group.detailViewType}"
+                app:detailViewTypeBackground="@{vm.group.groupDetailViewType}"
+                app:detailViewTypeStyle="@{vm.group.groupDetailViewType}"
+                app:detailViewTypeText="@{vm.group.groupDetailViewType}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/rcv_group_detail_dog_list"
                 tools:text="참여하기"
